Bug 407021 - Show hidden accounts
Summary: Show hidden accounts
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.0.4
Platform: Compiled Sources Linux
: NOR minor
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
: 408349 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-04-28 18:22 UTC by lp.allard.1
Modified: 2019-06-05 16:12 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.0.5
Sentry Crash Report:


Attachments
Reports dialog box (46.90 KB, image/png)
2019-04-29 19:18 UTC, lp.allard.1
Details

Note You need to log in before you can comment on or make changes to this bug.
Description lp.allard.1 2019-04-28 18:22:19 UTC
SUMMARY
In KMM 5.0.0, Menu entry "Show all Accounts" under View menu does nothing and has no effect (like if no code was associated to it).

Showing/hiding closed accounts is done via Preferences > Filter > Do not show closed accounts.

STEPS TO REPRODUCE
1. Install KMM 5.0.0
2. GO to accounts page & try menu View>Show all accounts

OBSERVED RESULT
Menu entry has NO effect

EXPECTED RESULT
Menu entry should toggle between showing & hiding closed accounts

SOFTWARE/OS VERSIONS
KDE Frameworks 5.44.0
Qt 5.9.5 (built against 5.9.5)
The xcb windowing system
Comment 1 Jack 2019-04-28 19:26:54 UTC
I believe the View/Show all accounts will show closed accounts if the Settings/Configure KMyMoney is set to not show closed accounts.  If closed accounts are shown, then toggling "Show all accounts" will have no apparent effect.
Comment 2 lp.allard.1 2019-04-29 19:18:54 UTC
Created attachment 119721 [details]
Reports dialog box
Comment 3 lp.allard.1 2019-04-29 19:19:13 UTC
Just attached a screenshot.

I just checked and the menu entry HAS NO effect whatsoever.

On a different note, I noticed several issues with 5.0.0, some critical, some very minor.  A good example, in the reports configuration dialog, the buttons are "Find" & "Close" instead of "Ok" & "Close" as in previous versions...

Are you aware if the version available in the Mint repos (Bionic) are a beta version of KMM?
Comment 4 lp.allard.1 2019-04-29 19:23:17 UTC
Changed KMM version in this bug ticket, in KMM > Help > About KMM I see Version 5.0.0 but Linux Mint package reports 5.0.1..........

dpkg -s kmymoney
Package: kmymoney
Status: install ok installed
Priority: optional
Section: kde
Installed-Size: 12337
Maintainer: Ubuntu Developers <ubuntu-devel-discuss@lists.ubuntu.com>
Architecture: amd64
Version: 5.0.1-2
Depends: kio, libalkimia5-7 (>= 7.0), libaqbanking35 (>= 5.6.1beta), libc6 (>= 2.14), libgcc1 (>= 1:3.0), libgmp10, libgpgmepp6 (>= 1.10.0), libgwengui-cpp0, libgwengui-qt5-0, libgwenhywfar60 (>= 3.11.6), libical3 (>= 3.0.0), libkchart2 (>= 2.6.0), libkf5activities5 (>= 4.96.0), libkf5akonadicore-bin, libkf5akonadicore5abi1 (>= 4:16.12.3+git20170414), libkf5archive5 (>= 4.96.0), libkf5codecs5 (>= 4.96.0), libkf5completion5 (>= 4.97.0), libkf5configcore5 (>= 4.98.0), libkf5configgui5 (>= 4.97.0), libkf5configwidgets5 (>= 5.23.0), libkf5contacts5 (>= 15.07.90), libkf5coreaddons5 (>= 5.2.0), libkf5holidays5 (>= 15.12.0), libkf5i18n5 (>= 4.97.0), libkf5identitymanagement5abi1 (>= 16.04.3), libkf5itemmodels5 (>= 4.96.0), libkf5itemviews5 (>= 4.96.0), libkf5jobwidgets5 (>= 4.96.0), libkf5kcmutils5 (>= 4.96.0), libkf5kiocore5 (>= 4.96.0), libkf5kiofilewidgets5 (>= 4.96.0), libkf5kiowidgets5 (>= 4.96.0), libkf5notifications5 (>= 4.96.0), libkf5service-bin, libkf5service5 (>= 5.2.0+git20140930), libkf5sonnetui5 (>= 4.96.0), libkf5textwidgets5 (>= 4.96.0), libkf5wallet-bin, libkf5wallet5 (>= 4.96.0), libkf5webkit5 (>= 4.96.0), libkf5widgetsaddons5 (>= 4.96.0), libkf5xmlgui-bin, libkf5xmlgui5 (>= 4.98.0), libofx7, libpython2.7 (>= 2.7), libqt5core5a (>= 5.9.0~beta), libqt5dbus5 (>= 5.0.2), libqt5gui5 (>= 5.8.0), libqt5network5 (>= 5.1.0), libqt5printsupport5 (>= 5.0.2), libqt5quickwidgets5 (>= 5.3.0), libqt5sql5 (>= 5.0.2), libqt5webkit5 (>= 5.6.0~rc), libqt5widgets5 (>= 5.4.0), libqt5xml5 (>= 5.1.0), libstdc++6 (>= 5.2), libaqbanking35-plugins, kmymoney-common (= 5.0.1-2)
Recommends: gnupg-agent, pinentry-qt | pinentry-x11
Suggests: kcalc
Description: personal finance manager for KDE
 KMyMoney is the Personal Finance Manager for KDE. It operates similar to
 MS-Money and Quicken, supports different account types, categorisation of
 expenses, QIF import/export, multiple currencies and initial online banking
 support.
Original-Maintainer: Debian KDE Extras Team <pkg-kde-extras@lists.alioth.debian.org>
Homepage: https://kmymoney.org/
Comment 5 Jack 2019-04-29 19:54:32 UTC
Unfortunately, 5.0.1 did identify itself as 5.0.0, so it probably was really 5.0.1.  What happened was the tarball was created and released before the internal version number was updated.

The change from "OK" to "Find" is at most a cosmetic issue, and I have a vague recollection that it was made based on a request on the mailing list, but I'm not certain.  "Find" is actually more accurate, since clicking that button finds the transactions identified by the configuration and presents the report of that data.

On the "Show all accounts" issue, first, confirm that you do have one or more closed accounts.  With the configuration item set to not hide closed accounts, are the closed accounts then visible in the accounts view?  They should be visible with either setting of "Show all accounts."  If you change the configuration item to hide closed accounts, then "Show all accounts" should toggle the display of the closed accounts.  "Show all accounts" will only have an effect if there ARE closed accounts, and the configuration setting is to hide closed accounts.  If both of these are true, and it still has no effect, we'll need to dig deeper, but it works fine for me (but with a later version.)

In addition, several critical as well as minor bugs have been fixed in 5.0.2, 5.0.3, and most recently 5.0.4, just released last week.  If you find a bug, it is good to check whether it has already been reported.  Remember, however, that the normal bug search only looks at bugs that have not been marked as resolved.
Comment 6 lp.allard.1 2019-04-30 01:59:27 UTC
Hello Jack

1. The Report config dialog box buttons is OK t me, it was just confusing to see such a trivial change occur and I assumed something was wrong with either the KDE or Oxygen/Plasma sublayers.  After all I run Mint XFCE so I dont use KDE...

2. I confirm I have several closed accounts in Accounts view.  I confirm that the Preference setting shows the closed accounts or hides them.  I also confirm that the menu entry "Show all accounts" has NO effect whatever if the preference setting is ticked or not.

I may contact the Ubuintu/Mint package maintainer(s) to ask why they haven't yet released KMM 5.0.3 or 5.0.4 as a package.
Comment 7 Thomas Baumgart 2019-05-05 17:42:57 UTC
1. "After all I run Mint XFCE so I dont use KDE..."
You may not use the KDE window manager but you use lots of KDE technology (called KDE Frameworks) since KMyMoney relies on it.

2. I think this issue has been reported as bug 402814 and fixed in the meantime. If so, please resolve it as duplicate of 402814.
Comment 8 lp.allard.1 2019-05-05 21:33:45 UTC
Thomas,  I run 5.0.4 freshly compiled on Mint 19.1 (Ubuntu Bionic).  I am NO LONGER using the package that was available in Mint's repos because it was extremely buggy (5.0.1).

However, I still see this problem.  I just tried with a fresh database, its like the Menu entry has no code behind it.
Comment 9 lp.allard.1 2019-05-05 21:34:51 UTC
**WRONG TICKET !**
Comment 10 Thomas Baumgart 2019-05-08 20:31:55 UTC
Git commit 89e8db9e7d55c5268afde436497de147e7d65fb3 by Thomas Baumgart.
Committed on 06/05/2019 at 15:58.
Pushed by tbaumgart into branch '5.0'.

Respect the "view/show all accounts" option in all views

Respect the option also in the accounts, categories and institution view
FIXED-IN: 5.0.5

M  +1    -1    kmymoney/views/kaccountsview.cpp
M  +1    -1    kmymoney/views/kcategoriesview.cpp
M  +1    -1    kmymoney/views/kinstitutionsview.cpp

https://commits.kde.org/kmymoney/89e8db9e7d55c5268afde436497de147e7d65fb3
Comment 11 Thomas Baumgart 2019-06-05 16:12:51 UTC
*** Bug 408349 has been marked as a duplicate of this bug. ***