Respect the "view/show all accounts" option in all views

Respect the option also in the accounts, categories and institution view

BUG: 407021
FIXED-IN: 5.0.5